--- a/my-project/package.json
+++ b/my-project/package.json
@@ -17,7 +17,8 @@
     "flowbite": "^2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
