--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdbootstrap/react-dropdown-button": "^1.0.0",
+    "@splinetool/loader": "^1.0.17",
     "@splinetool/react-spline": "^2.2.6",
     "@splinetool/runtime": "^1.0.17",
     "axios": "^1.6.2",
@@ -18,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "react-uuid": "^2.0.0"
+    "react-uuid": "^2.0.0",
+    "three": "^0.160.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
